--- a/chat/views/web/index.html
+++ b/chat/views/web/index.html
@@ -6,15 +6,17 @@
 <body>
 
 <link rel="stylesheet" href="CSS/index.css">
-<script src="jquery.js"></script>
+<script src="jquery-3.2.1.js"></script>
 <!-- <script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.js"></script> -->
 <script src="jquery.cookie.js"></script>
 <script type='text/javascript' src='webim.config.js'></script>
 <script type='text/javascript' src='strophe-1.2.8.min.js'></script>
 <script type='text/javascript' src='websdk-1.4.10.js'></script>
-<script src="//v1.vuejs.org/js/vue.min.js"></script>
+<script src="//vuejs.org/js/vue.min.js"></script>
+<!-- 引入样式 -->
 <link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
-<script src="//unpkg.com/iview@1.0.1/dist/iview.min.js"></script>
+<!-- 引入组件库 -->
+<script src="//unpkg.com/iview/dist/iview.min.js"></script>
 
 
 
