更新了找回密码的部分功能，下午完善好

--- a/chat/views/web/register.html
+++ b/chat/views/web/register.html
@@ -162,7 +162,7 @@
                     t.instance('passnolike');
                     return false;
                 }
-                if(t.phone.length!=10 || t.phone.length!=11)
+                if(t.phone.length!=10 && t.phone.length!=11)
                 {
                     t.instance('phoneerr');
                     return false;
