--- a/chat/views/web/findpass.html
+++ b/chat/views/web/findpass.html
@@ -14,11 +14,11 @@
     <script type='text/javascript' src='webim.config.js'></script>
     <script type='text/javascript' src='strophe-1.2.8.min.js'></script>
     <script type='text/javascript' src='websdk-1.4.10.js'></script>
-    <script src="//vuejs.org/js/vue.min.js"></script>
+    <script src="../vue.min.js"></script>
     <!-- 引入样式 -->
-    <link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
+    <link rel="stylesheet" href="../iview.css">
     <!-- 引入组件库 -->
-    <script src="//unpkg.com/iview/dist/iview.min.js"></script>
+    <script src="../iview.min.js"></script>
 
 
     <style>
@@ -44,38 +44,38 @@
 
                 <div v-show='setp==1'>
 
-                    <i-input v-model="id" placeholder="请输入ID" style="width: 300px" class="input_box"></i-input>
-                    <I-input v-model="phone" style="width:300px;margin:20px 0 0 50px;" placeholder="手机号码">
+                    <i-input v-model="id" :placeholder="lang._001" style="width: 300px" class="input_box"></i-input>
+                    <I-input v-model="phone" style="width:300px;margin:20px 0 0 50px;" :placeholder="lang._005">
                         <span slot="prepend">+63</span>
                     </I-input>
 
 
                     <!-- <i-Button type="primary"  loading></i-Button> -->
-                    <i-input v-model="code" placeholder="请輸入验证码" style="width: 229px;float:left;margin-right:0" class="input_box"></i-input>
+                    <i-input v-model="code" :placeholder="lang._006" style="width: 229px;float:left;margin-right:0" class="input_box"></i-input>
                     <i-Button type="primary" :loading="loading" @click="toLoading()" style="float:left;margin-top:20px;margin-left:10px;width: 60px;
             text-align: center;" number='true'>
-                        <span v-if="!loading">Send</span>
+                        <span v-if="!loading">{{lang._007}}</span>
                         <span v-else></span>
                     </i-Button>
                     <p class="login-txt-left">
-                        <a href="../">Login</a>
+                        <a href="../">{{lang.login}}</a>
                     </p>
                     <div class="btn-login-div">
-                        <button class="btn-login" @click="find()">Next</button>
+                        <button class="btn-login" @click="find()">{{lang._026}}</button>
                     </div>
 
                 </div>
 
                 <div v-show="setp==2">
-                    <i-input v-model="password" type="password" placeholder="请输入密碼" style="width: 300px" class="input_box"></i-input>
+                    <i-input v-model="password" type="password" :placeholder="lang._003" style="width: 300px" class="input_box"></i-input>
 
-                    <i-input v-model="configpas" type="password" placeholder="请输入密碼" style="width: 300px" class="input_box"></i-input>
+                    <i-input v-model="configpas" type="password" :placeholder="lang._004" style="width: 300px" class="input_box"></i-input>
 
                     <p class="login-txt-left">
-                        <a href="../">Login</a>
+                        <a href="../">{{lang.login}}</a>
                     </p>
                     <div class="btn-login-div">
-                        <button class="btn-login" @click="changepass()">Submit</button>
+                        <button class="btn-login" @click="changepass()">{{lang.submit}}</button>
                     </div>
                 </div>
 
@@ -86,6 +86,10 @@
     </div>
     <script src="phchat.js"></script>
     <script>
+
+        var a='<%- JSON.stringify(lang) %>'
+        
+        var lang=eval('(' + a + ')');
         var page = new Vue({
             el: '#main-div',
             data: {
@@ -96,7 +100,8 @@
                 phone: '',
                 code: '',
                 loading: false,
-                setp: 1
+                setp: 1,
+                lang:lang
             },
             methods: {
                 instance(type, title, message, btn1, btn2, callback = "") {
