--- a/chat/views/web/index.html
+++ b/chat/views/web/index.html
@@ -14,7 +14,7 @@
 <script type='text/javascript' src='websdk-1.4.10.js'></script>
 <script src="../vue.min.js"></script>
 <!-- 引入样式 -->
-<link rel="stylesheet" href="../iview.css">
+<link rel="stylesheet" href="../styles/iview.css">
 <!-- 引入组件库 -->
 <script src="../iview.min.js"></script>
 
