--- a/chat/views/web/register.html
+++ b/chat/views/web/register.html
@@ -15,11 +15,11 @@
     <script type='text/javascript' src='webim.config.js'></script>
     <script type='text/javascript' src='strophe-1.2.8.min.js'></script>
     <script type='text/javascript' src='websdk-1.4.10.js'></script>
-    <script src="//vuejs.org/js/vue.min.js"></script>
+    <script src="../vue.min.js"></script>
     <!-- 引入样式 -->
-    <link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
+    <link rel="stylesheet" href="../styles/iview.css">
     <!-- 引入组件库 -->
-    <script src="//unpkg.com/iview/dist/iview.min.js"></script>
+    <script src="../iview.min.js"></script>
 
 
     <style>
