--- a/chat/views/web/register.html
+++ b/chat/views/web/register.html
@@ -176,14 +176,14 @@
                         code: this.code
                     }, function (result) {
                         console.log(result);
-                        if (result == 1) {
-                            t.instance('regsuccess');
+                        // if (result == 1) {
+                        //     t.instance('regsuccess');
 
-                        } else if (result == -1) {
-                            t.instance('codeerr');
-                        } else if (result == 0) {
-                            t.instance('nameerr');
-                        }
+                        // } else if (result == -1) {
+                        //     t.instance('codeerr');
+                        // } else if (result == 0) {
+                        //     t.instance('nameerr');
+                        // }
                     });
                 },
                 instance(type) {
