--- a/chat/views/web/register.html
+++ b/chat/views/web/register.html
@@ -77,9 +77,9 @@
     </div>
     <script src="phchat.js"></script>
     <script>
-        var a='<%- JSON.stringify(lang) %>'
-        
-        var lang=eval('(' + a + ')');
+        var a = '<%- JSON.stringify(lang) %>'
+
+        var lang = eval('(' + a + ')');
         var page = new Vue({
             el: '#main-div',
             data: {
@@ -90,53 +90,54 @@
                 phone: '',
                 code: '',
                 loading: false,
-                lang:lang
+                lang: lang
             },
             methods: {
-                test: function () {
+                test: function() {
                     var t = this;
                     t.instance('regsuccess');
                 },
-                toLoading: function () {
+                toLoading: function() {
                     var t = this;
 
 
 
 
                     if (!t.loading) {
+                        if (t.id == "" || t.id.match(/^\w+$/) == null || t.id.length > 16 || t.id.length < 5) {
+                            console.login(t.id);
+                            t.instance('iderr');
+                            return false;
+                        }
 
                         if (t.phone.length != 10 && t.phone.length != 11) {
                             t.instance('phoneerr');
                             return false;
                         }
-                        if (t.id == "" || t.id.match(/^\w+$/) == null || t.id.length > 16 || t.id.length < 5) {
-                        t.instance('usernameerr');
-                        return false;
-                    }
 
-                    if (t.password == "" || t.password.match(/^\w+$/) == null || t.password.length > 16 ||
-                        t.password.length < 6) {
-                        t.instance('passerr');
-                        return false;
-                    }
+                        if (t.password == "" || t.password.match(/^\w+$/) == null || t.password.length > 16 ||
+                            t.password.length < 6) {
+                            t.instance('passerr');
+                            return false;
+                        }
 
-                    if (t.usernmae == "" || t.username.match(/^\w+$/) == null || t.username.length > 16 ||
-                        t.username.length < 6) {
-                        t.instance('usernameerr');
-                        return false;
+                        if (t.usernmae == "" || t.username.match(/^\w+$/) == null || t.username.length > 16 ||
+                            t.username.length < 6) {
+                            t.instance('usernameerr');
+                            return false;
 
-                    }
-                    if (t.configpas != t.password) {
-                        t.instance('passnolike');
-                        return false;
-                    }
-                    
+                        }
+                        if (t.configpas != t.password) {
+                            t.instance('passnolike');
+                            return false;
+                        }
+
                         t.loading = true;
                         $.post('./send', {
                             id: this.id,
                             username: this.username,
                             phone: this.phone
-                        }, function (result) {
+                        }, function(result) {
                             if (result == 1) {
                                 t.instance('success');
                                 t.loading = true;
@@ -160,12 +161,12 @@
                     }
 
                 },
-                register: function () {
+                register: function() {
                     var t = this;
                     //先做正则啊密码什么的验证
 
                     if (t.id == "" || t.id.match(/^\w+$/) == null || t.id.length > 16 || t.id.length < 5) {
-                        t.instance('usernameerr');
+                        t.instance('iderr');
                         return false;
                     }
 
@@ -196,20 +197,20 @@
                         phone: this.phone,
                         password: this.password,
                         code: this.code
-                    }, function (result) {
+                    }, function(result) {
                         console.log(result);
-                         if (result == 1) {
-                             t.instance('regsuccess');
+                        if (result == 1) {
+                            t.instance('regsuccess');
 
-                         } else if (result == -1) {
-                             t.instance('codeerr');
-                         } else if (result == 0) {
-                             t.instance('nameerr');
-                         }
+                        } else if (result == -1) {
+                            t.instance('codeerr');
+                        } else if (result == 0) {
+                            t.instance('nameerr');
+                        }
                     });
                 },
                 instance(type) {
-                    var t=this;
+                    var t = this;
                     switch (type) {
 
                         case 'success':
@@ -224,8 +225,8 @@
                         case 'error':
                             this.$Modal.error({
                                 title: t.lang._016,
-                                content:t.lang_025,
-                                okText:t.lang.ok,
+                                content: t.lang_025,
+                                okText: t.lang.ok,
                                 cancelText: t.lang.cancel
                             });
                             break;
@@ -233,7 +234,7 @@
                             this.$Modal.error({
                                 title: t.lang._010,
                                 content: t.lang._011,
-                                okText:t.lang.ok,
+                                okText: t.lang.ok,
                                 cancelText: t.lang.cancel
                             });
                             break;
@@ -287,7 +288,7 @@
                             break;
                         case 'pf':
                             this.$Modal.error({
-                                title:t.lang._016,
+                                title: t.lang._016,
                                 content: t.lang._019,
                                 okText: t.lang.ok,
                                 cancelText: t.lang.cancel
@@ -304,7 +305,7 @@
                         case 'codeerr':
                             this.$Modal.error({
                                 title: t.lang._020,
-                                content:t.lang._022,
+                                content: t.lang._022,
                                 okText: t.lang.ok,
                                 cancelText: t.lang.cancel
                             });
@@ -317,7 +318,7 @@
                                 okText: t.lang.ok,
                                 onOk: () => {
                                     window.location.href = "../";
-                                    
+
                                 }
                             });
                             break;
